--- a/src/resource/views/users/allBrands.hbs
+++ b/src/resource/views/users/allBrands.hbs
@@ -4,11 +4,13 @@
     <div class="main-title" style="text-transform:uppercase"><b>Toàn bộ thương hiệu</b></div>
   </div>
   
-  <div class="all-products">
+  <div class="all-brands">
     {{#each product}}
-      <a href="/all-products/all-brands/{{this}}">
-        {{this}}
-      </a>
+      <div class="brand">
+        <a href="/all-products/all-brands/{{this}}">
+          {{this}}
+        </a>
+      </div>
     {{/each}}
   </div>
 </div>
