--- a/src/resource/views/users/allOrders.hbs
+++ b/src/resource/views/users/allOrders.hbs
@@ -7,7 +7,7 @@
     <span>3</span>
   </div>
 
-  <form id="form-4" action="/orders/create-orders" method="post">
+  <form id="form-4" action="/all-orders/create-orders" method="post">
     <div class="cart">
       <p>Giỏ Hàng Của Tôi</p>
       <table>
