--- a/src/public/css/adminOrder.css
+++ b/src/public/css/adminOrder.css
@@ -6,13 +6,14 @@
   gap: 10px;
 
   .title, .info-group, .product-group {
-    width: 90%;
+    width: 100%;
     background-color: white;
     height: max-content;
     padding: 10px;
     border-radius: 10px;
     display: flex;
     align-items: center;
+    margin-top: 10px;
   }
 
   .title {
@@ -25,7 +26,7 @@
   .info-group, .product-group {
     gap: 5px;
     
-    title, p, button {
+    title, label {
       display: flex;
       align-items: center;
       justify-content: center;
@@ -37,14 +38,31 @@
       background-color: #D1A6A6;
     }
     
-    p {
+    label {
       border: 1px solid #D1A6A6;
       margin-block-start: 0;
       margin-block-end: 0;
     }
 
-    button {
-      border: 1px solid #D1A6A6;
+    input {
+      display: none;
     }
+  }
+
+  button {
+    margin-top: 10px;
+    width: 10%; 
+    height: 30px;
+    background-color: white;
+    color: #D1A6A6;
+    border: 1px solid #D1A6A6;
+    border-radius: 5px;
+    cursor: pointer;
+  };
+
+  button:hover {
+    background-color: #D1A6A6;
+    color: white;
+    border: 1px solid white ;
   }
 }
