--- a/src/public/css/adminUpdateProfile.css
+++ b/src/public/css/adminUpdateProfile.css
@@ -1,19 +1,10 @@
 .admin-update-profile-container {
   display: flex;
-  justify-content: center;
-  display: flex;
   align-items: center;
   justify-content: center;
-
-  form {
-    border: 1px solid black;
-    padding: 5px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    height: fit-content;
-  }
+  flex-direction: column;
 
   .form-title {
-    width: 504px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -24,43 +15,59 @@
       text-transform: uppercase
     };
   }
-  
+
+  .form-data {
+    width: 80%;
+  }
+
   .form-group {
-    display: grid;
-    gap: 5px;
-    padding: 5px 10px 5px 10px;
-
-    input {
-      width: 100%;
-      min-height: 30px;
-      border-radius: 5px;
-      border-style: none;
-    };
-
-    #avatar {
-      width: fit-content;
-      padding-left: 5px;
-    }
+    width: 100%;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
 
-  select, option {
-    width: fit-content;
-    height: 30px;
-    border-radius: 5px;
-    border-style: none;
-    padding-left: 5px;
-  }
-
-  .submit-button {
-    width: 504px;
+  .avatar {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 10px 0 10px 0;
+    padding: 10px;
+  }
+
+  img {
+    max-width: 100px;
+    aspect-ratio: 1 / 1;
+  }
+
+  label {
+    font-weight: bolder;
+    text-transform: capitalize;
+  }
+
+  input:not(input[type='radio']) {
+    width: 50%;
+    height: 40px;
+    border: 1px solid #D1A6A6;
+    border-radius: 5px;
+    text-indent: 10px;
+  }
+
+  input {
+    text-align: center;
+  }
+
+  .submit-button {
+    width: 100%;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
   
   button {
-    width: 150px; 
+    width: 10%; 
     height: 30px;
     background-color: white;
     color: #D1A6A6;
