--- a/src/resource/views/layouts/admin.hbs
+++ b/src/resource/views/layouts/admin.hbs
@@ -25,8 +25,21 @@
     {{> adminSidebar}}
   </header>
   
-  <main style="margin-left: 200px;">
+  <main>
     {{{body}}}
   </main>
 </body>
 </html>
+
+<style>
+  main {
+    margin-left: 200px;
+  }
+
+  @media screen and (max-width: 700px) {
+    main {
+      margin-left: 100px;
+    }
+  }
+
+</style>
