--- a/src/resource/views/partials/adminSidebar.hbs
+++ b/src/resource/views/partials/adminSidebar.hbs
@@ -1,6 +1,6 @@
 <div class="admin-sidebar-container">
   <div class="admin-account">
-    <img src="https://scontent.fhan2-3.fna.fbcdn.net/v/t39.30808-6/407842795_816972246897281_6146221013070996008_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=dd5e9f&_nc_eui2=AeEOTJ6a9Y5eJBfwa6N0_lQ-RTSqpruNgfZFNKqmu42B9uQbv6DfHeIPanb061IGVIezorkFPofMERZj-gFOglE4&_nc_ohc=p62EIuWyuxAAX8UNbaX&_nc_ht=scontent.fhan2-3.fna&oh=00_AfDTIUs46A-syaNKoL8L8USwQVWsBkprh7iBu3QxPxIu8w&oe=65E2021A" />
+    <img src="https://scontent.fhan14-1.fna.fbcdn.net/v/t39.30808-6/407842795_816972246897281_6146221013070996008_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeEOTJ6a9Y5eJBfwa6N0_lQ-RTSqpruNgfZFNKqmu42B9uQbv6DfHeIPanb061IGVIezorkFPofMERZj-gFOglE4&_nc_ohc=MmwZ5w7WdKwAX928kX4&_nc_ht=scontent.fhan14-1.fna&oh=00_AfAi4KDMU0-BhcJ9zMGIYkCr2agkHpXANg1qWf0Ip3RQPA&oe=65F3CE5A" />
     <div>
       <p>Xin chào Quỳnh Ly,</p>
       <p id="welcome-text"></p>
@@ -8,35 +8,31 @@
   </div>
   
   <div class="admin-button">
-    <a href="/admin" class="sidebar-button">
+    <a href="/admin" class="sidebar-button" id="home-page">
       <i class="fi fi-br-home"></i>
       <p>Trang Chủ</p>
     </a>
-    <a href="/admin/all-orders" class="sidebar-button">
+    <a href="/admin/all-orders" class="sidebar-button" id="orders">
       <i class="fi fi-rr-piggy-bank"></i>
       <p>Đơn Hàng</p>
     </a>
-    <a href="/admin/create" class="sidebar-button">
+    <a href="/admin/create" class="sidebar-button" id="create-product">
       <i class="fi fi-br-layer-plus"></i>
       <p>Thêm Sản Phẩm</p>
     </a>
-    <a href="/admin/all-products" class="sidebar-button">
+    <a href="/admin/all-products" class="sidebar-button" id="total-products">
       <i class="fi fi-rr-box-open"></i>
       <p>Tổng Sản Phẩm</p>
     </a>
-    <a href="/admin/trash" class="sidebar-button">
+    <a href="/admin/trash" class="sidebar-button" id="trash">
       <i class="fi fi-br-trash"></i>
       <p>Kho</p>
     </a>
-    <a href="/" class="sidebar-button">
-      <i class="fi fi-br-browser"></i>
-      <p></p>
-    </a>
-    <a href="/admin/update-profile" class="sidebar-button">
+    <a class="sidebar-button" id="update-profile">
       <i class="fi fi-br-circle-user"></i>
       <p>Cập Nhật Thông Tin Cá Nhân</p>
     </a>
-    <a href="/home" class="sidebar-button">
+    <a href="/home" class="sidebar-button" id="log-out">
       <i class="fi fi-br-exit"></i>
       <p>Đăng Xuất</p>
     </a>
@@ -60,9 +56,29 @@
   let helloText = `Chúc bạn một ${checkDay} vui vẻ !!!`
   document.getElementById('welcome-text').innerHTML = helloText
 
-  // log-out
-  var logOutButton = document.querySelectorAll('a.sidebar-button')[7]
+  // update-profile
+  function getCookie(cname) {
+    let name = cname + "=";
+    let decodedCookie = decodeURIComponent(document.cookie);
+    let ca = decodedCookie.split(';');
+    for(let i = 0; i <ca.length; i++) {
+      let c = ca[i];
+      while (c.charAt(0) == ' ') {
+        c = c.substring(1);
+      }
+      if (c.indexOf(name) == 0) {
+        return c.substring(name.length, c.length);
+      }
+    }
+    return "";
+  }
 
+  var updateProfileButton = document.querySelector('a#update-profile')
+  var adminId = getCookie('user_id') 
+  updateProfileButton.setAttribute('href', `/admin/update-profile/${adminId}`)
+
+  // log-out
+  var logOutButton = document.querySelector('a#log-out')
   logOutButton.onclick = function() {
     document.cookie = "auth_token=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;";
   }
