--- a/src/resource/views/users/updateProfile.hbs
+++ b/src/resource/views/users/updateProfile.hbs
@@ -4,7 +4,12 @@
       <p>Sửa Thông Tin Cá Nhân</p>
     </div>
 
+    <div class="avatar">
+      <img src="../../../img/logo.jpg" alt="">
+    </div>
+
     <div class="form-group">
+      <label for="name">Tên Khách Hàng</label>
       <input 
         type="text" 
         class="form-control" 
@@ -12,7 +17,10 @@
         name="name" 
         value="{{user.userInfo.name}}"
       >
+    </div>
 
+    <div class="form-group">
+      <label for="phone">Số điện thoại</label>
       <input 
         type="text" 
         class="form-control" 
@@ -20,15 +28,21 @@
         name="phone" 
         value="{{user.userInfo.phone}}"
       >
+    </div>
 
-      <input 
-        type="text" 
-        class="form-control" 
-        id="gender" 
-        name="gender" 
-        value="{{user.userInfo.gender}}"
-      >
+    <div class="form-group">
+      <label for="gender">Giới tính</label>
+      <div>
+        <input type="radio" id="male" name="gender" value="male">
+        <label for="cash">Nam</label>
+        
+        <input type="radio" id="female" name="gender" value="female">
+        <label for="cashless">Nữ</label>
+      </div>
+    </div>
 
+    <div class="form-group">
+      <label for="address">Địa chỉ nhận hàng</label>
       <input 
         type="text" 
         class="form-control" 
@@ -38,7 +52,9 @@
       >
     </div>
 
-    <button type="submit">Cập Nhật</button>
+    <div class="submit-button">
+      <button type="submit">Cập Nhật</button>
+    </div>
   </form>  
 </div>   
 
