--- a/src/resource/views/layouts/users.hbs
+++ b/src/resource/views/layouts/users.hbs
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="/css/userIntroduce.css">
   <link rel="stylesheet" href="/css/userOrder.css">
   <link rel="stylesheet" href="/css/userOrdersChecking.css">
+  <link rel="stylesheet" href="/css/userOrdersProfile.css">
   <link rel="stylesheet" href="/css/userProduct.css">
   <link rel="stylesheet" href="/css/userUpdateProfile.css">
   <link rel="stylesheet" href="/css/body.css">
