--- a/src/resource/views/partials/userHeader.hbs
+++ b/src/resource/views/partials/userHeader.hbs
@@ -161,7 +161,7 @@
 
     var checkOrderButton = document.createElement('a')
     checkOrderButton.innerText = 'Tiến Độ Giao Hàng'
-    checkOrderButton.setAttribute('href', `/profile/orders${user_id}`)
+    checkOrderButton.setAttribute('href', `/profile/orders/${user_id}`)
     getAvatarMenu.appendChild(checkOrderButton)
 
     var logOutButton = document.createElement('a')
