--- a/src/public/css/userAllOrders.css
+++ b/src/public/css/userAllOrders.css
@@ -139,3 +139,44 @@
     }
   }
 }
+
+.order-successfully-message {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 80%;
+  background-color: white;
+  border: 1px solid #FFDFDF;
+  border-radius: 10px;
+  height: 60%;
+  z-index: 2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 5px;
+  gap: 5px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+  i {
+    color: #D1A6A6;
+    font-size: 50px;
+  }
+
+  h5 {
+    font-style: italic;
+    margin-block-start: 0;
+    margin-block-end: 0;
+  }
+
+  button {
+    width: max-content; 
+    height: fit-content;
+    background-color: white;
+    color: #D1A6A6;
+    border: 1px solid #D1A6A6;
+    border-radius: 5px;
+    cursor: pointer;
+  };
+}
