--- a/src/public/css/userUpdateProfile.css
+++ b/src/public/css/userUpdateProfile.css
@@ -1,6 +1,13 @@
 .user-update-profile-container {
-  .form-title {
+  form {
     width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .form-title {
+    width: 60%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -13,7 +20,7 @@
   }
 
   .form-group {
-    width: 100%;
+    width: 60%;
     padding: 10px;
     display: flex;
     flex-direction: column;
@@ -37,7 +44,7 @@
   }
 
   input:not(input[type='radio']) {
-    width: 50%;
+    width: 100%;
     height: 40px;
     border: 1px solid #D1A6A6;
     border-radius: 5px;
