--- a/src/resource/views/admin/allProducts.hbs
+++ b/src/resource/views/admin/allProducts.hbs
@@ -44,8 +44,8 @@
           Lựa chọn
         </th>
       </tr>
-      
-      {{#each product}}
+
+      {{#each newProduct}}
       <tr>
         <td style="width: 10%;">{{addIndex @index 1}}</td>
         <td style="width: 20%;">{{this.brand}}</td>
@@ -81,8 +81,10 @@
     </table>
   </div>
 
-  <span class="see-more-button">
+  {{!-- <span class="see-more-button">
     <button>Xem thêm</button>
+  </span> --}}
+  <span class="pagination">
   </span>
 </div>
 
@@ -106,12 +108,35 @@
     deleteForm.submit()
   }
 
-  // pagination button, 10 items on each click
-  let seeMoreButton = document.querySelector('span.see-more-button').querySelector('button')
-  let allProducts = document.querySelectorAll('tr')
-  let allProductsLength = allProducts.length
+  // pagination 
+  var pagination = document.querySelector('span.pagination')
+  var productLength = `{{productLength}}`
+  var currentPage = 1
 
-  for (let i = 1; i < allProductsLength; ++i) {
+  // díplay all pages tag
+  for (let i = 0; i < productLength; i += 10) {
+    var newPage = document.createElement('a')
+    newPage.setAttribute('href', `/admin/all-products?page=${currentPage}`)
+    newPage.innerText = `${currentPage}`
+    pagination.appendChild(newPage)
+    currentPage++
+  }
+
+  // Style the current selected page
+  var allPagesTag = pagination.querySelectorAll('a')
+  for (let i = 0; i < allPagesTag.length; ++i) {
+    if (allPagesTag[i].innerText === `{{currentPage}}`) {
+      allPagesTag[i].style.borderColor = '#D1A6A6'
+      allPagesTag[i].style.backgroundColor = '#D1A6A6'
+      allPagesTag[i].style.color = 'white'
+      allPagesTag[i].style.width = '25px'
+      allPagesTag[i].style.height = '25px'
+    }
+  }
+
+  // 
+  var allProducts = document.querySelectorAll('tr')
+  for (let i = 1; i < productLength; ++i) {
     let productName = allProducts[i].querySelectorAll('td')[3]
     if (productName.innerText !== '') {
       productName.innerText = 'Skincare'
@@ -119,22 +144,11 @@
       productName.innerText = 'Makeup'
     }
   }
-
-  // pagination
-  let firstIndex = 1
-  let nextIndex = 11 
-  for (let i = nextIndex; i < allProductsLength; ++i) {
-    allProducts[i].style.display = 'none'
-  }
-
-  seeMoreButton.onclick = function() {
-    firstIndex += 10
-    nextIndex += 10
-    if (firstIndex < allProductsLength) {
-      checkFilter(firstIndex, nextIndex, allProducts, selectButton)
-    } 
-  }
   
+  // total product
+  var totalProduct = document.querySelector('p.total-number')
+  totalProduct.innerText = `{{productLength}}`
+
   // filter button logic
   let selectButton = document.querySelector('select')
   selectButton.onchange = function () {
