--- a/src/public/css/userUpdateProfile.css
+++ b/src/public/css/userUpdateProfile.css
@@ -1,77 +1,145 @@
 .user-update-profile-container {
-  form {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-  }
-  .form-title {
-    width: 60%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  padding: 20px;
+  justify-content: space-around;
 
-    p {
-      font-size: larger;
-      font-weight: bolder;
-      text-transform: uppercase
-    };
-  }
-
-  .form-group {
-    width: 60%;
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-  }
-
-  .avatar {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 10px;
-  }
-
-  img {
-    max-width: 100px;
-    aspect-ratio: 1 / 1;
-  }
-
-  label {
-    font-weight: bolder;
-    text-transform: capitalize;
-  }
-
-  input:not(input[type='radio']) {
-    width: 100%;
-    height: 40px;
-    border: 1px solid #D1A6A6;
-    border-radius: 5px;
-    text-indent: 10px;
-  }
-
-  .submit-button {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 10px 0 10px 0;
-  }
-  
-  button {
-    width: 10%; 
-    height: 30px;
+  .sidebar-menu {
+    width: 20%;
     background-color: white;
-    color: #D1A6A6;
-    border: 1px solid #D1A6A6;
-    border-radius: 5px;
-    cursor: pointer;
-  };
+    border-radius: 10px;
+    padding: 10px 0;
 
-  button:hover {
-    background-color: #D1A6A6;
-    color: white;
-    border: 1px solid white ;
+    .avatar {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 10px;
+      flex-direction: column;
+
+      img {
+        max-width: 75px;
+        aspect-ratio: 1 / 1;
+      }
+    }
+    
+    .tag {
+      ul {
+        margin-block-start: 0;
+        margin-block-end: 0;
+        list-style: none;
+        padding-inline-start: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+      };
+  
+      li {
+        width: 80%;
+        padding: 10px;
+        border-radius: 5px;
+        cursor: pointer;
+      }
+
+      li:hover {
+        background-color: #FFDFDF;
+      }
+    }
+  }
+
+  .content {
+    width: 70%;
+    background-color: white;
+    border-radius: 10px;
+    padding: 10px;
+
+    form {
+      width: 100%;
+      display: grid;
+      grid-template-columns: auto auto;
+  
+      .form-group {
+        width: 80%;
+        padding: 10px;
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+      }
+    
+      label {
+        font-weight: bolder;
+        text-transform: capitalize;
+      }
+    
+      input:not(input[type='radio']) {
+        width: 100%;
+        height: 40px;
+        border: 1px solid #D1A6A6;
+        border-radius: 5px;
+        text-indent: 10px;
+      }
+    }
+
+    .submit-button {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      button {
+        width: 10%; 
+        height: 30px;
+        background-color: white;
+        color: #D1A6A6;
+        border: 1px solid #D1A6A6;
+        border-radius: 5px;
+        cursor: pointer;
+      };
+    
+      button:hover {
+        background-color: #D1A6A6;
+        color: white;
+        border: 1px solid white ;
+      }
+    }
+
+    table {
+      width: 100%;
+      border-spacing: 0px 10px;
+      padding: 0px 10px;
+      text-align: center;
+
+      th {
+        background-color:#D1A6A6;
+        height: 50px;
+        text-align: center;
+        a { text-decoration: none };
+        i { color: black }
+      }
+  
+      tr {
+        background-color:#F0F0F0;
+        height: 50px;
+
+        td {
+          text-align: center;
+        }
+  
+        td:first-child {
+          border-top-left-radius: 10px;
+          border-bottom-left-radius: 10px;
+        }
+        td:last-child {
+          border-top-right-radius: 10px;
+          border-bottom-right-radius: 10px;
+        }
+
+        a { text-decoration: none; color: black; font-weight: bolder;}
+      }
+      
+      tr:hover {
+        filter: brightness(85%);
+      }
+    }
   }
 }
