--- a/src/public/css/userUpdateProfile.css
+++ b/src/public/css/userUpdateProfile.css
@@ -53,6 +53,19 @@
     border-radius: 10px;
     padding: 10px;
 
+    p {
+      background-color: #F0F0F0;
+      height: fit-content;
+      padding: 10px;
+      text-transform: capitalize;
+      font-weight: bolder;
+      margin-block-start: 0px;
+      margin-block-end: 0px;
+      font-size: x-large;
+      text-align: center;
+      border-radius: 5px;
+    }
+
     form {
       width: 100%;
       display: grid;
