--- a/src/resource/views/users/allOrders.hbs
+++ b/src/resource/views/users/allOrders.hbs
@@ -9,16 +9,20 @@
 
   <form id="form-4" action="/all-orders/create-orders" method="post">
     <div class="cart">
-      <p>Giỏ Hàng Của Tôi</p>
+      <p>
+        <i class="fi fi-rs-shopping-cart-check"></i>
+        Giỏ Hàng 
+      </p>
+
       <table>
         <thead>
           <tr>
-            <td style="width: 10%;"></td>
-            <td style="width: 50%;">Tên Sản Phẩm</td>
+            <td style="width: 15%;"></td>
+            <td style="width: 50%;">Sản Phẩm</td>
             <td style="width: 10%;">Giá</td>
             <td style="width: 10%;">Số Lượng</td>
             <td style="width: 10%;">Tổng Tiền</td>
-            <td style="width: 10%;">Xoá</td>
+            <td style="width: 5%;"></td>
           </tr>
         </thead>
         <tbody>
@@ -29,33 +33,58 @@
     </div>
 
     <div class="contact-info">
-      <p>Thông Tin Khách Hàng</p>
-      <label for="name">Tên Khách Hàng *</label>
-      <input type="text" id="name" name="name">
-      <span class="form-message"></span><br>
+      <p>
+        <i class="fi fi-rs-user-check"></i>
+        Thông Tin Khách Hàng
+      </p>
 
-      <label for="phone">Số Điện Thoại *</label>
-      <input type="text" id="phone" name="phone">
-      <span class="form-message"></span><br>
+      <div class="info">
+        <div class="form-group">
+          <label for="name">Tên Khách Hàng *</label>
+          <input type="text" id="name" name="name">
+          <span class="form-message"></span>
+        </div>
 
-      <label for="address">Địa Chỉ Nhận Hàng *</label>
-      <input type="text" id="address" name="address">
-      <span class="form-message"></span><br>
+        <div class="form-group">
+          <label for="phone">Số Điện Thoại *</label>
+          <input type="text" id="phone" name="phone">
+          <span class="form-message"></span>
+        </div>
 
-      <label for="note">Ghi Chú</label>
-      <input type="text" id="note" name="note">
+        <div class="form-group">
+          <label for="address">Địa Chỉ Nhận Hàng *</label>
+          <input type="text" id="address" name="address">
+          <span class="form-message"></span>
+        </div>
+
+        <div class="form-group">
+          <label for="note">Ghi Chú</label>
+          <input type="text" id="note" name="note">
+        </div>
+      </div> 
     </div>
 
     <div class="payment-method">
-      <p>Hình Thức Thanh Toán</p>
+      <p>
+        <i class="fi fi-rr-credit-card"></i>
+        Hình Thức Thanh Toán
+      </p>
 
-      <input type="radio" id="cash" name="paymentMethod" value="cash">
-      <label for="cash">Trả Tiền Mặt</label><br>
-      
-      <input type="radio" id="cashless" name="paymentMethod" value="transfer">
-      <label for="cashless">Chuyển Khoản</label>
-      <div class="bank-account">
-        <span>19037654462013<br>Techcombank<br>Đặng Quỳnh Ly</span>
+      <div class="form-group">
+        <input type="radio" id="cash" name="paymentMethod" value="cash">
+        <label for="cash">Trả Tiền Mặt</label><br>
+
+        <input type="radio" id="cashless" name="paymentMethod" value="transfer">
+        <label for="cashless">Chuyển Khoản</label>
+
+        <div class="bank-account">
+          <div class="bank-info">
+            <span>19037654462013</span>
+            <span>Techcombank</span>
+            <span>Đặng Quỳnh Ly</span>
+          </div>
+          <img src="../img/fc4c4fd10517a949f006.jpg" alt="">
+        </div>
       </div>
     </div>
 
@@ -201,7 +230,6 @@ function updateTableBody(totalOrderPrice) {
     newProductDelete.setAttribute('class', 'delete-button')
     newProductDelete.innerHTML = `
       <i class="fi fi-tr-trash-slash"></i>
-      xoá
     `
 
     // calculate all product prices
@@ -287,8 +315,8 @@ deleteCart(totalOrderPrice)
 //
 function validating(inputElement, rule, checkValidate, index) {
   var errorMessage = rule.test(inputElement.value)
-  var errorElement = inputElement.parentElement.querySelectorAll('.form-message')[index]
-  var errorLabelElement = inputElement.parentElement.querySelectorAll('label')[index]
+  var errorElement = inputElement.parentElement.querySelector('.form-message')
+  var errorLabelElement = inputElement.parentElement.querySelector('label')
 
   if (errorMessage) {
     errorElement.innerText = errorMessage
@@ -361,7 +389,7 @@ if (`{{successful}}` && `{{newOrderId}}`) {
     <h3>Chúc mừng bạn đã đặt hàng thành công !!!</h3>
     <h3>Mã đơn hàng của bạn là: {{newOrderId}}</h3>
     <h5>Nếu là người mới, bạn hãy lưu lại mã này để theo dõi đơn hàng ở mục 'Đơn hàng' nhé</h5>
-    <h5>Còn nếu bạn đã có tài khoản rồi thì có thể theo dõi đơn hàng ở mục 'Tiến độ đơn hàng' luôn nha</h5>
+    <h5>Còn nếu bạn đã có tài khoản rồi thì có thể theo dõi đơn hàng ở mục 'Thông tin cá nhân' luôn nha</h5>
     <a href="/all-orders"><button>OK</button></a>
   `
   document.body.appendChild(orderSuccessfullyMessage)
