--- a/src/resource/views/partials/adminSidebar.hbs
+++ b/src/resource/views/partials/adminSidebar.hbs
@@ -20,7 +20,7 @@
       <i class="fi fi-br-layer-plus"></i>
       <p>Thêm Sản Phẩm</p>
     </a>
-    <a href="/admin/all-products" class="sidebar-button" id="total-products">
+    <a href="/admin/all-products?page=1&type=" class="sidebar-button" id="total-products">
       <i class="fi fi-rr-box-open"></i>
       <p>Tổng Sản Phẩm</p>
     </a>
