--- a/src/resource/views/users/allOrders.hbs
+++ b/src/resource/views/users/allOrders.hbs
@@ -1,12 +1,4 @@
 <div class="all-orders-container">
-  <div class="progress">
-    <span>1</span>
-    <progress id="first-progress" value="0" max="100"></progress>
-    <span>2</span>
-    <progress id="second-progress" value="0" max="100"></progress>
-    <span>3</span>
-  </div>
-
   <form id="form-4" action="/all-orders/create-orders" method="post">
     <div class="cart">
       <p>
@@ -71,7 +63,7 @@
       </p>
 
       <div class="form-group">
-        <input type="radio" id="cash" name="paymentMethod" value="cash">
+        <input type="radio" id="cash" name="paymentMethod" value="cash" checked>
         <label for="cash">Trả Tiền Mặt</label><br>
 
         <input type="radio" id="cashless" name="paymentMethod" value="transfer">
@@ -89,12 +81,12 @@
     </div>
 
     <div class="button">
-      <button title="submit" type="submit" class="submit-button">Đặt Hàng</button>
+      <button title="submit" type="submit" class="submit-button">Hoàn tất đặt hàng</button>
     </div>
   </form>
 
   <div class="button">
-    <button class="next-button">Tiếp theo</button>
+    <button class="next-button">Tiến hành đặt hàng</button>
   </div>
 </div>
 
@@ -104,8 +96,6 @@ var getContactInfo = document.querySelector('div.contact-info')
 var getPaymentMethod = document.querySelector('div.payment-method')
 var getNextButton = document.querySelector('button.next-button')
 var getSubmitButton = document.querySelector('button.submit-button')
-var getProgressMarks = document.querySelector('div.progress').querySelectorAll('span')
-var getProgressBars = document.querySelectorAll('progress')
 var getTableBody = document.querySelector('tbody')
 var getTableFooter = document.querySelector('tfoot')
 // define a total order price, store as an object to change initial value through each function
@@ -119,12 +109,7 @@ function displayProcess(
   getPaymentMethod,
   getNextButton,
   getSubmitButton,
-  getProgressMarks,
-  getProgressBars,
 ) {
-    getProgressMarks[0].style.backgroundColor = '#D1A6A6'
-    getProgressMarks[0].style.color = 'white'
-
     // set default display to 'none' on start
     getContactInfo.style.display = 'none'
     getPaymentMethod.style.display = 'none'
@@ -133,23 +118,9 @@ function displayProcess(
     getNextButton.onclick = function() {
       if (getContactInfo.style.display === 'none') {
         getContactInfo.style.display = 'grid'
-
-        getProgressMarks[1].style.backgroundColor = '#D1A6A6'
-        getProgressMarks[1].style.color = 'white'
-        getProgressMarks[0].innerHTML = `<i class="fi fi-br-check"></i>`
-
-        getProgressBars[0].value = '100'
-        getProgressBars[0].style.accentColor = '#D1A6A6'
       } 
       else {
         getPaymentMethod.style.display = 'block'
-
-        getProgressMarks[2].style.backgroundColor = '#D1A6A6'
-        getProgressMarks[2].style.color = 'white'
-        getProgressMarks[1].innerHTML = `<i class="fi fi-br-check"></i>`
-
-        getProgressBars[1].value = '100'
-        getProgressBars[1].style.accentColor = '#D1A6A6'
       }
 
       if (getPaymentMethod.style.display === 'block') {
@@ -163,8 +134,6 @@ displayProcess(
   getPaymentMethod,
   getNextButton,
   getSubmitButton,
-  getProgressMarks,
-  getProgressBars
 )
 
 // create table body
@@ -390,7 +359,7 @@ if (`{{successful}}` && `{{newOrderId}}`) {
     <h3>Mã đơn hàng của bạn là: {{newOrderId}}</h3>
     <h5>Nếu là người mới, bạn hãy lưu lại mã này để theo dõi đơn hàng ở mục 'Đơn hàng' nhé</h5>
     <h5>Còn nếu bạn đã có tài khoản rồi thì có thể theo dõi đơn hàng ở mục 'Thông tin cá nhân' luôn nha</h5>
-    <a href="/all-orders"><button>OK</button></a>
+    <a href="/home"><button>OK</button></a>
   `
   document.body.appendChild(orderSuccessfullyMessage)
 }
