--- a/src/resource/views/users/product.hbs
+++ b/src/resource/views/users/product.hbs
@@ -35,7 +35,7 @@
         <div class="add-to-cart">
           <p>Thêm Vào Giỏ</p>
         </div>
-        <a href="/orders">
+        <a href="/all-orders">
           <div class="buy-now">
             <p>Mua Ngay</p> 
           </div>
