--- a/src/public/css/adminUpdateProfile.css
+++ b/src/public/css/adminUpdateProfile.css
@@ -16,24 +16,31 @@
     };
   }
 
-  .form-data {
-    width: 80%;
-  }
+  form {
+    width: 90%;
+    display: grid;
+    grid-template-columns: auto auto;
 
-  .form-group {
-    width: 100%;
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .avatar {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 10px;
+    .form-group {
+      width: 80%;
+      padding: 10px;
+      display: flex;
+      flex-direction: column;
+      gap: 5px;
+    }
+  
+    label {
+      font-weight: bolder;
+      text-transform: capitalize;
+    }
+  
+    input:not(input[type='radio']) {
+      width: 100%;
+      height: 40px;
+      border: 1px solid #D1A6A6;
+      border-radius: 5px;
+      text-indent: 10px;
+    }
   }
 
   img {
