--- a/src/public/css/body.css
+++ b/src/public/css/body.css
@@ -37,6 +37,18 @@ body {
   background: #D1A6A6;
 }
 
+/* .scroll-to-top {
+  position: relative;
+  display: inline-block;
+  margin-left: auto;
+  margin-right: 0;
+  bottom: 60px;
+  right: 5px;
+  position: fixed;
+
+  i { font-size: 30px; background-color: transparent };
+} */
+
 /* CSS contact-information */
 .dropup {
   position: relative;
