--- a/src/public/css/userAllProducts.css
+++ b/src/public/css/userAllProducts.css
@@ -92,7 +92,7 @@
   .product {
     background-color: white; 
     max-width: 220px;
-    padding: 5px 12px 5px 12px;
+    padding: 5px 12px;
     scroll-snap-align: none start;
     border-radius: 10px;
     a, p { text-decoration: none; color: black}
