--- a/src/public/css/userHeader.css
+++ b/src/public/css/userHeader.css
@@ -7,6 +7,8 @@ header {
   top: 0;
   width: 100%;
   background-color: #FFDFDF;
+  /* background: transparent;
+  backdrop-filter: blur(10px); */
   z-index: 3;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
