--- a/src/resource/views/admin/allOrders.hbs
+++ b/src/resource/views/admin/allOrders.hbs
@@ -1,6 +1,6 @@
 <div class="admin-all-orders-container">  
   <div class="board-sidebar">
-    <p>Tổng Đơn Hàng</p>
+    <p>Tổng Đơn Hàng: {{totalOrders}}</p>
   </div>
 
   <div class="table">
@@ -54,13 +54,4 @@
       {{/each}}
     </table>
   </div>
-
-  <div class="total">
-    <p class="total-title">Tổng Đơn Hàng</p>
-    <p class="total-number">{{total}}</p>
-  </div>
 </div>
-
-<script>
-
-</script>
