--- a/src/resource/views/users/introduce.hbs
+++ b/src/resource/views/users/introduce.hbs
@@ -1,3 +1,39 @@
 <div class="introduce-container">
-  <h1>hello everyone</h1>
+    <h2><image src="../../../img/full_logo.jpg"/> Xin chào các bạn đã đến với BunnyStore - Thế giới mỹ phẩm của mình!</h2>
+    
+    <div>
+      <image src="../../../img/logo.jpg"/>
+      <span>
+        <br>BunnyStore là cửa hàng mỹ phẩm của mình, một người yêu thích làm đẹp và luôn mong muốn mang đến cho các bạn những sản phẩm chất lượng, an toàn và hiệu quả nhất.
+        <br>Tại BunnyStore, các bạn có thể tìm thấy đa dạng các thương hiệu mỹ phẩm nổi tiếng từ Hàn Quốc, Nhật Bản, Mỹ, châu Âu,... cho đến các thương hiệu nội địa uy tín. Tất cả sản phẩm đều là hàng chính hãng hết nha.
+        <br>Với kiến thức của mình về sản phẩm, mình hy vọng sẽ giúp các bạn lựa chọn được những sản phẩm phù hợp nhất với nhu cầu và loại da của bạn.
+      </span>
+    </div>
+
+    <hr>
+    
+    <div>
+      <span>
+        <ul>Đến với BunnyStore, các bạn sẽ được:</ul>
+          <li> Trải nghiệm mua sắm mỹ phẩm chính hãng, đa dạng và phong phú.</li> 
+          <li> Được tư vấn miễn phí.</li> 
+          <li> Cập nhật những xu hướng làm đẹp mới nhất.</li> 
+      </span>
+      <image src="../../../img/logo.jpg"/>
+    </div>
+    
+    <hr>
+
+    <div>
+      <image src="../../../img/logo.jpg"/>
+      <span>
+        <ul>Hãy liên hệ với mình qua:</ul>
+          <li> Website: https://thebunniestore.com/ </li>
+          <li> Facebook: [Facebook BunnyStore]</li> 
+          <li> Instagram: [Instagram BunnyStore]</li> 
+          <li> Hotline: [Số điện thoại BunnyStore]</li> 
+      </span>
+    </div>
+
+    <h5> Hãy đến với BunnyStore để cùng Ly khám phá thế giới mỹ phẩm đầy màu sắc và biến hóa bản thân trở nên xinh đẹp, rạng rỡ hơn mỗi ngày nha ! </h5>
 </div>
